# fastapi-learning-journey

./: README.md
week1_todo_crud/: .gitignore  Utils.py  database.json  main.py  models.py  pyproject.toml  task_db.json  user_db.json
week2_dB/: .gitignore  config.py  main.py  models.py  pyproject.toml
